fixed image spacing, corrected syntax error

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -34,9 +34,7 @@ nav a:hover{
 .headerText{
 	text-align: center;
 	max-width: 48%;
-	
 }
-
 .button{
 	width: 150px;
 	height:35px;
@@ -49,11 +47,9 @@ nav a:hover{
 	background-color:black;
 	border:2px solid grey;
 }
-
 .headerText h1 {
 	font-size:70px;
 }
-
 .topContent {
 	display: flex;
 	justify-content: space-between;
@@ -148,17 +144,11 @@ nav a:hover{
 	margin:40px 0;
 } 
 /* CLOSING CONTENTS */
-.closingThought {
+.closingThoughts {
 	display: flex;
-	justify-content: space-between;
-	align-content: center;
-	height: 500px;
-}
-.service-info-img{
-	width:40%
 }
 .someFactsBox{
-	width:46%;
+	width:45%;
 	margin: 15px;
 }
 .someFactsBox h3{
@@ -173,7 +163,6 @@ nav a:hover{
 	margin-top: 20px;
 	line-height: 1.9;
 }
-
 .serviceFooter {
 	margin-top: 50px;
 	display: flex;
